yarn add react-query

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "baseUrl": ".",
     "paths": {
       "@components/*": ["components/*"],
-      "@types/*": ["types/*"]
+      "@types/*": ["types/*"],
+      "@common/*": ["common/*"]
     },
     "incremental": true
   },
