--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
     "antd": "^4.18.3",
     "next": "12.0.7",
     "react": "17.0.2",
@@ -20,6 +21,7 @@
     "@types/react": "17.0.38",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
+    "eslint-config-prettier": "^8.3.0",
     "typescript": "4.5.4"
   }
 }
