--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-app",
   "private": true,
   "scripts": {
-    "sever": "nodemon --watch \"./server/**/*.ts\" --exec \"ts-node\" ./server/server.ts",
+    "server": "nodemon --watch \"./server/**/*.ts\" --exec \"ts-node\" ./server/index.ts",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
