--- a/server/package.json
+++ b/server/package.json
@@ -10,5 +10,12 @@
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "@types/mongodb": "^4.0.7",
+    "@types/mongoose": "^5.11.97",
+    "dotenv": "^14.2.0",
+    "mongodb": "^4.3.1",
+    "mongoose": "^6.1.7"
   }
 }
