--- a/server/package.json
+++ b/server/package.json
@@ -3,17 +3,22 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "server": "nodemon --watch \"./**/*.ts\" --exec \"ts-node\" ./index.ts"
+  },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/node": "^17.0.10",
-    "express": "^4.17.2",
+    "@types/node": "^17.0.21",
+    "express": "^4.17.3",
     "nodemon": "^2.0.15",
-    "ts-node": "^10.4.0",
+    "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
+    "bcrypt": "^5.0.1",
     "dotenv": "^14.2.0",
     "mongodb": "^4.3.1",
     "mongoose": "^6.1.7"
