--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "server": "nodemon --watch \"./**/*.ts\" --exec \"ts-node\" ./index.ts"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.21",
     "express": "^4.17.3",
@@ -19,6 +20,7 @@
     "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^14.2.0",
     "mongodb": "^4.3.1",
     "mongoose": "^6.1.7"
